--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -525,6 +525,8 @@ services:
       - LND_GRPC_MACAROON=/app/.lnd/regtest/admin.macaroon
     volumes:
       - ./docker/lnd/stacker:/app/.lnd
+    labels:
+      CONNECT: "localhost:${LNBITS_WEB_PORT}"
 volumes:
   db:
   os:
