--- a/.env.development
+++ b/.env.development
@@ -160,3 +160,8 @@ TOR_PROXY=http://127.0.0.1:7050/
 
 # lnbits
 LNBITS_WEB_PORT=5001
+
+# CPU shares for each category
+CPU_SHARES_IMPORTANT=1024
+CPU_SHARES_MODERATE=512
+CPU_SHARES_LOW=256
