--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "graphql-scalar": "^0.1.0",
     "graphql-tag": "^2.12.6",
     "graphql-type-json": "^0.3.2",
+    "isomorphic-ws": "^5.0.0",
     "ln-service": "^57.1.3",
     "macaroon": "^3.0.4",
     "mathjs": "^11.11.2",
