Switch NWC from Damus to Primal relay

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -535,7 +535,7 @@ services:
     entrypoint:
       - 'nostr-wallet-connect-lnd'
       - '--relay'
-      - 'wss://relay.damus.io'
+      - 'wss://relay.primal.net'
       - '--macaroon-file'
       - '/root/.lnd/regtest/admin.macaroon'
       - '--cert-file'
