Enable WebLN wallet on 'webln:enabled'

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -17,6 +17,9 @@
             "@/components/*": [
                 "components/*"
             ],
+            "@/wallets/*": [
+                "wallets/*"
+            ],
             "@/styles/*": [
                 "styles/*"
             ],
