LNbits updates for local dev
* persistent lnbits db with lnbits superuser
* map localhost:5001 -> lnbits:5000 in local dev for LNbits receives
* updated ATTACH.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -586,7 +586,8 @@ services:
       - 'keys-file.json'
     cpu_shares: "${CPU_SHARES_LOW}"
   lnbits:
-    image: lnbits/lnbits:0.12.5
+    build:
+      context: ./docker/lnbits
     container_name: lnbits
     profiles:
       - wallets
@@ -596,6 +597,7 @@ services:
     depends_on:
       - stacker_lnd
     environment:
+      - LNBITS_ADMIN_UI=true
       - LNBITS_BACKEND_WALLET_CLASS=LndWallet
       - LND_GRPC_ENDPOINT=stacker_lnd
       - LND_GRPC_PORT=10009
