--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "react-twitter-embed": "^4.0.4",
     "react-youtube": "^10.1.0",
     "recharts": "^2.9.0",
+    "rehype-mathjax": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "remove-markdown": "^0.5.0",
     "sass": "^1.69.3",
     "serviceworker-storage": "^0.1.0",
