--- a/.env.production
+++ b/.env.production
@@ -22,3 +22,4 @@ GRAPHQL_SLOW_LOGS_MS=50
 DB_APP_CONNECTION_LIMIT=4
 DB_WORKER_CONNECTION_LIMIT=2
 DB_TRANSACTION_TIMEOUT=10000
+DEBUG_CACHED_FETCHER=1
