tor for the dev environment

--- a/.env.development
+++ b/.env.development
@@ -157,7 +157,8 @@ PERSISTENCE=1
 SKIP_SSL_CERT_DOWNLOAD=1
 
 # tor
-TOR_PROXY=http://127.0.0.1:7050/
+TOR_PROXY=http://tor:7050/
+GRPC_PROXY=http://tor:7050/
 
 # lnbits
 LNBITS_WEB_PORT=5001
