grpc_proxy should be lowercase (?)

--- a/.env.development
+++ b/.env.development
@@ -156,9 +156,10 @@ AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 PERSISTENCE=1
 SKIP_SSL_CERT_DOWNLOAD=1
 
-# tor
+# tor proxy
 TOR_PROXY=http://tor:7050/
-GRPC_PROXY=http://tor:7050/
+# tor proxy that discriminates between onion and clearnet (http/grpc only)
+grpc_proxy=http://tor:7051/
 
 # lnbits
 LNBITS_WEB_PORT=5001
