run both tor http proxy and privoxy

--- a/docker/tor/Dockerfile
+++ b/docker/tor/Dockerfile
@@ -10,7 +10,7 @@ ADD tor.sh /tor.sh
 ADD services.conf /services.conf
 ADD privoxy.conf  /etc/privoxy/config
 RUN mkdir -p /tordata && groupadd -g 1000 tor && useradd -u 1000 -g 1000 -m tor && chown -R tor:tor /tordata
-EXPOSE 9050 9051 7050
+EXPOSE 9050 9051 7050 7051
 VOLUME "/tordata"
 USER tor
 ENTRYPOINT [ "bash", "/tor.sh" ]
