--- a/.env.development
+++ b/.env.development
@@ -156,9 +156,8 @@ AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 PERSISTENCE=1
 SKIP_SSL_CERT_DOWNLOAD=1
 
-# tor proxy
-TOR_PROXY=http://tor:7050/
-grpc_proxy=http://tor:7050/
+# tor
+TOR_PROXY=http://127.0.0.1:7050/
 
 # lnbits
 LNBITS_WEB_PORT=5001
