--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "pg-boss": "^9.0.3",
     "piexifjs": "^1.0.6",
     "prisma": "^5.20.0",
+    "proxied-lnd-service": "github:stackernews/proxied-lnd-service#10.22.1",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-avatar-editor": "^13.0.2",
