--- a/docker/tor/services.conf
+++ b/docker/tor/services.conf
@@ -1,3 +1,3 @@
-HiddenServicePort 10009 stacker_lnd:10009
-HiddenServicePort 3010 stacker_cln:3010
+HiddenServicePort 10009 lnd:10009
+HiddenServicePort 3010 cln:3010
 HiddenServicePort 5000 lnbits:5000
