--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@lightninglabs/lnc-web": "^0.3.2-alpha",
     "@noble/curves": "^1.6.0",
     "@nostr-dev-kit/ndk": "^2.10.5",
+    "@nostr-dev-kit/ndk-wallet": "^0.3.13",
     "@opensearch-project/opensearch": "^2.12.0",
     "@prisma/client": "^5.20.0",
     "@slack/web-api": "^7.6.0",
