feat: clustered ffmpeg transcoding

--- a/.env.development
+++ b/.env.development
@@ -82,6 +82,11 @@ IMGPROXY_ENABLE_VIDEO_THUMBNAILS=1
 # IMGPROXY_DEVELOPMENT_ERRORS_MODE=1
 # IMGPROXY_ENABLE_DEBUG_HEADERS=true
 
+# ffmpeg
+NEXT_PUBLIC_FFMPEG_URL=http://localhost:3002
+FFMPEG_PORT=3002
+FFMPEG_WORKERS=4
+
 NEXT_PUBLIC_AWS_UPLOAD_BUCKET=uploads
 NEXT_PUBLIC_MEDIA_DOMAIN=localhost:4566
 NEXT_PUBLIC_MEDIA_URL=http://localhost:4566/uploads
