--- a/package.json
+++ b/package.json
@@ -126,5 +126,11 @@
     "eslint": "^9.12.0",
     "jest": "^29.7.0",
     "standard": "^17.1.2"
+  },
+  "nextBundleAnalysis": {
+    "budget": 358400,
+    "budgetPercentIncreaseRed": 20,
+    "minimumChangeThreshold": 0,
+    "showDetails": true
   }
 }
