--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
   push:
     branches:
-      - main # change this if your default branch is named differently
+      - master # change this if your default branch is named differently
   workflow_dispatch:
 
 defaults:
@@ -57,7 +57,14 @@ jobs:
 
       - name: Build next.js app
         # change this if your site requires a custom build command
-        run: ./node_modules/.bin/next build
+        run: |
+          touch .env
+          cat .env.development > .env
+          cat .env.production > .env
+          echo "VAPID_MAILTO=mailto:cicd@stacker.news" > .env
+          echo "NEXT_PUBLIC_VAPID_PUBKEY=test_vapid_pubkey" > .env
+          echo "VAPID_PRIVKEY=test_vapid_privkey" > .env
+          ./node_modules/.bin/next build
 
       # Here's the first place where next-bundle-analysis' own script is used
       # This step pulls the raw bundle stats for the current bundle
