--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -22,51 +22,22 @@ permissions:
 
 jobs:
   analyze:
-    runs-on: ubuntu-latest
+    runs-on: node:18.20.4-bullseye
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-
-      # If pnpm is used, you need to switch the previous step with the following one. pnpm does not create a package-lock.json
-      # so the step above will fail to pull dependencies
-      # - uses: pnpm/action-setup@v2
-      #   name: Install pnpm
-      #   id: pnpm-install
-      #   with:
-      #     version: 7
-      #     run_install: true
-
-      - name: Restore next build
-        uses: actions/cache@v3
-        id: restore-build-cache
-        env:
-          cache-name: cache-next-build
-        with:
-          # if you use a custom build directory, replace all instances of `.next` in this file with your build directory
-          # ex: if your app builds to `dist`, replace `.next` with `dist`
-          path: .next/cache
-          # change this if you prefer a more strict cache
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
+      - name: Create dotenv file
+        run: |
+          touch .env
+          cat .env.development >> .env
+          cat .env.production >> .env
+          echo "VAPID_MAILTO=mailto:cicd@stacker.news" >> .env
+          echo "NEXT_PUBLIC_VAPID_PUBKEY=test_vapid_pubkey" >> .env
+          echo "VAPID_PRIVKEY=test_vapid_privkey" >> .env
+          echo "Environment:"
+          cat .env
 
       - name: Build next.js app
         # change this if your site requires a custom build command
-        run: |
-          touch .env
-          cat .env.development > .env
-          cat .env.production > .env
-          echo "VAPID_MAILTO=mailto:cicd@stacker.news" > .env
-          echo "NEXT_PUBLIC_VAPID_PUBKEY=test_vapid_pubkey" > .env
-          echo "VAPID_PRIVKEY=test_vapid_privkey" > .env
-          echo "Environment:"
-          cat .env
-          ./node_modules/.bin/next build
+        run: ./node_modules/.bin/next build
 
       # Here's the first place where next-bundle-analysis' own script is used
       # This step pulls the raw bundle stats for the current bundle
