Fix channel opens
For some reason, the channdler cron jobs failed with these errors:

```
2024-12-04T02:20:09.111Z  common.go:121 ▶ ERROR [Job "lnd_channel_cron" (6b7fc846c887)] StdErr: [lncli] rpc error: code = Unknown desc = dial tcp 172.18.0.10:9735: connect: connection refused
2024-12-04T02:20:09.111Z  common.go:121 ▶ ERROR [Job "lnd_channel_cron" (6b7fc846c887)] Finished in "103.885007ms", failed: true, skipped: false, error: error non-zero exit code: 1
2024-12-04T02:20:09.144Z  common.go:121 ▶ ERROR [Job "sn_channel_cron" (e58187ffa0f0)] StdErr: [lncli] rpc error: code = Unknown desc = received funding error from 03ca7acec181dbf5e427c682c4261a46a0dd9ea5f35d97acb094e399f727835b90: chan_id
=d7b20b3ae6a83ed31703c3dca5f37d68f22c6470bbaf6815546dac9cbcf04a4f, err=Multiple simulteneous opens not supported
2024-12-04T02:20:09.144Z  common.go:121 ▶ ERROR [Job "sn_channel_cron" (e58187ffa0f0)] Finished in "139.982822ms", failed: true, skipped: false, error: error non-zero exit code: 1
2024-12-04T02:21:14.153Z  common.go:121 ▶ ERROR [Job "cln_channel_cron" (45317149195d)] StdOut: {
   "id": "02cb2e2d5a6c5b17fa67b1a883e2973c82e328fb9bd08b2b156a9e23820c87a490",
   "features": "8000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000020008a8a51a1",
   "direction": "out",
   "address": {
      "type": "ipv4",
      "address": "172.18.0.8",
      "port": 9735
   }
}
{
   "code": -1,
   "message": "Owning subdaemon openingd died (62208)",
   "data": {
      "id": "02cb2e2d5a6c5b17fa67b1a883e2973c82e328fb9bd08b2b156a9e23820c87a490",
      "method"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -514,13 +514,8 @@ services:
       ofelia.job-exec.cln_channel_cron.schedule: "@every 1m"
       ofelia.job-exec.cln_channel_cron.command: >
         su clightning -c bash -c "
-          if [ $$(lightning-cli --regtest getinfo | jq '.num_active_channels + .num_pending_channels') -ge 3 ]; then
-            exit 0
-          else
-            lightning-cli --regtest connect $LND_PUBKEY@sn_lnd:9735
-            lightning-cli --regtest fundchannel id=$LND_PUBKEY feerate=1000perkb \\
-              amount=1000000000 push_msat=500000000000 minconf=0
-          fi
+          lightning-cli --regtest connect $STACKER_LND_PUBKEY@lnd:9735
+          lightning-cli --regtest connect $LND_PUBKEY@sn_lnd:9735
         "
     cpu_shares: "${CPU_SHARES_MODERATE}"
   channdler:
