Use 1sat base fee and 1000ppm fee rate
With these fees, a 1000 sat payment will cost 2 sats: 1 sat base fee + [(1_000_000 msats / 1_000_000) * 1_000 = 1 sat]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -498,6 +498,8 @@ services:
       - '--rest-port=3010'
       - '--rest-host=0.0.0.0'
       - '--log-file=/home/clightning/.lightning/debug.log'
+      - '--fee-base=1000'
+      - '--fee-per-satoshi=1000'
     expose:
       - "9735"
     ports:
