--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -500,6 +500,7 @@ services:
       - '--log-file=/home/clightning/.lightning/debug.log'
       - '--fee-base=1000'
       - '--fee-per-satoshi=1000'
+      - '--funding-confirms=1'
     expose:
       - "9735"
     ports:
