use port 9735 for cln node so that it is consistent with the rest of the environment (default port for regtest is 19846)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -489,6 +489,8 @@ services:
     env_file: *env_file
     command:
       - 'lightningd'
+      - '--addr=0.0.0.0:9735'
+      - '--announce-addr=cln:9735'
       - '--network=regtest'
       - '--alias=cln'
       - '--bitcoin-rpcconnect=bitcoin'
